initial Hengshi gitbook theme

--- a/src/less/base/mixins.less
+++ b/src/less/base/mixins.less
@@ -30,3 +30,15 @@
     -webkit-text-size-adjust: @value;
 }
 
+.response-bigger-maxwidth {
+  width: 60%;
+  max-width: @maxWidth;
+
+  margin: 0 auto;
+}
+
+.response-mobile {
+  width: 95%;
+}
+
+
