--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -28,23 +28,28 @@
 
 {% block body %}
 <div class="book">
-    <div class="book-summary">
-        {% block book_sidebar %}
+    <div class="book-header">
+        <div class="book-header-inner">
+            <h1>{{ config.title }}</h1>
             {% block search_input %}{% endblock %}
-            {% block book_summary %}
-                <nav role="navigation">
-                {% include "website/summary.html" %}
-                </nav>
-            {% endblock %}
-        {% endblock %}
+        </div>
+        <div class="book-header-breadcrumb"></div>
     </div>
 
     <div class="book-body">
+        <div class="book-summary">
+            {% block book_sidebar %}
+                {% block book_summary %}
+                    <nav role="navigation">
+                    {% include "website/summary.html" %}
+                    </nav>
+                {% endblock %}
+            {% endblock %}
+        </div>
+
         {% block book_body %}
             <div class="body-inner">
                 {% block book_inner %}
-                    {% include "website/header.html" %}
-
                     <div class="page-wrapper" tabindex="-1" role="main">
                         <div class="page-inner">
                             {% block search_results %}
@@ -58,20 +63,11 @@
                     </div>
                 {% endblock %}
             </div>
-
-            {% block book_navigation %}
-                {% if page.previous and page.previous.path %}
-                <a href="{{ page.previous.path|resolveFile }}{{ page.previous.anchor }}" class="navigation navigation-prev {% if not (page.next and page.next.path) %}navigation-unique{% endif %}" aria-label="Previous page: {{ page.previous.title }}">
-                    <i class="fa fa-angle-left"></i>
-                </a>
-                {% endif %}
-                {% if page.next and page.next.path %}
-                <a href="{{ page.next.path|resolveFile }}{{ page.next.anchor }}" class="navigation navigation-next {% if not (page.previous and page.previous.path) %}navigation-unique{% endif %}" aria-label="Next page: {{ page.next.title }}">
-                    <i class="fa fa-angle-right"></i>
-                </a>
-                {% endif %}
-            {% endblock %}
         {% endblock %}
+    </div>
+
+    <div class="book-footer">
+        <p>2017-2018 hengshi.com 京 ICP 备17050711号</p>
     </div>
 
     <script>
