--- a/src/less/website.less
+++ b/src/less/website.less
@@ -3,15 +3,16 @@
 @import "../../node_modules/preboot/less/preboot.less";
 
 @import "website/variables.less";
-@import "website/languages.less";
+// @import "website/languages.less";
 @import "website/header.less";
-@import "website/dropdown.less";
+@import "website/footer.less";
+// @import "website/dropdown.less";
 @import "website/summary.less";
 @import "website/body.less";
 @import "website/page.less";
 @import "website/buttons.less";
 @import "website/markup.less";
-@import "website/navigation.less";
+// @import "website/navigation.less";
 @import "website/search.less";
 
 * {
@@ -25,10 +26,6 @@
 
 a {
     text-decoration: none;
-}
-
-html, body {
-    height: 100%;
 }
 
 html {
