--- a/src/less/website/search.less
+++ b/src/less/website/search.less
@@ -3,26 +3,24 @@
 */
 
 #book-search-input {
-    padding: 6px;
-    background: transparent;
-    transition: top 0.5s ease;
-    background: #fff;
-    border-bottom: 1px solid @header-border;
-    border-top: 1px solid @header-border;
-    margin-bottom: 10px;
+    input {
+        .response-bigger-maxwidth;
 
-    // Move top to hide top border
-    margin-top: -1px;
-
-    input, input:focus, input:hover {
-        width: 100%;
-        background: transparent;
-        border: 1px solid transparent;
+        background: #fff;
+        border: 1px solid @header-border;
         box-shadow: none;
         outline: none;
-        line-height: 22px;
-        padding: 7px 7px;
+        line-height: 40px;
+        padding: 0 10px;
         color: inherit;
+    }
+}
+
+@media (max-width: @mobileMaxWidth) {
+    #book-search-input {
+        input {
+            .response-mobile;
+        }
     }
 }
 
