--- a/src/less/website/variables.less
+++ b/src/less/website/variables.less
@@ -8,16 +8,22 @@
 @line-height-computed:    floor(@font-size-base * @line-height-base);
 
 // Sizes
-@mobileMaxWidth:                      1240px;
+@maxWidth:                            1280px;
+@mobileMaxWidth:                      960px;
 
 // Header
-@header-height:                       50px;
+@header-height:                       250px;
 @header-color:                        hsl(194, 5%, 52%);
 @header-background:                   transparent;
 @header-border:                       rgba(0, 0, 0, 0.07);
 @header-button-color:                 #ccc;
 @header-button-hover-color:           #444;
 @header-button-hover-background:      none;
+
+// Footer
+@footer-height:                       50px;
+@footer-color:                        #fefefe;
+@footer-background:                   #444;
 
 // Navigation
 @navigation-color:                    @header-button-color;
@@ -82,10 +88,10 @@
 @border-radius-small:                 1px;
 
 // Fonts
-@font-family-serif:                   Georgia, serif;
-@font-family-sans:                    "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-base:                    @font-family-sans;
-@headings-font-family:                inherit;
+@font-family-serif:                   "-apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, \"PingFang SC\", \"Hiragino Sans GB\", \"Microsoft YaHei\", \"Helvetica Neue\", Helvetica, Arial, sans-serif";
+@font-family-sans:                    "-apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, \"PingFang SC\", \"Hiragino Sans GB\", \"Microsoft YaHei\", \"Helvetica Neue\", Helvetica, Arial, sans-serif";
+@font-family-base:                    "-apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, \"PingFang SC\", \"Hiragino Sans GB\", \"Microsoft YaHei\", \"Helvetica Neue\", Helvetica, Arial, sans-serif";
+@headings-font-family:                "-apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, \"PingFang SC\", \"Hiragino Sans GB\", \"Microsoft YaHei\", \"Helvetica Neue\", Helvetica, Arial, sans-serif";
 
 @FontPath:                            '@{staticPath}/fonts';
 @fa-font-path:                        "@{FontPath}/fontawesome";
@@ -96,4 +102,3 @@
 @xl-font-size:                        2.2rem;
 @xxl-font-size:                       4.0rem;
 @default-font-size:                   @l-font-size;
-
