--- a/_layouts/website/layout.html
+++ b/_layouts/website/layout.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ "images/favicon-152x152.png"|resolveAsset }}">
-    <link rel="shortcut icon" href="{{ "images/favicon-32x32.png"|resolveAsset }}" type="image/x-icon">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/images/favicon-152x152.png">
+    <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
 {% endblock %}
 
 {% block style %}
