--- a/src/less/website/body.less
+++ b/src/less/website/body.less
@@ -1,10 +1,10 @@
-.book {
+.hengshidoc {
     width: 100%;
     color: @page-color;
     background: @body-background;
 }
 
-.book-body {
+.hengshidoc-body {
     .response-bigger-maxwidth;
 
     position: relative;
@@ -16,7 +16,7 @@
 }
 
 @media (max-width: @mobileMaxWidth) {
-    .book-body {
+    .hengshidoc-body {
         .response-mobile;
 
         padding-left: 0;
