--- a/src/less/website/footer.less
+++ b/src/less/website/footer.less
@@ -1,5 +1,5 @@
 
-.book-footer {
+.hengshidoc-footer {
   font-size: .6em;
   color: @footer-color;
   height: @footer-height;
@@ -23,7 +23,7 @@
 }
 
 @media (max-width: @mobileMaxWidth) {
-  .book-footer {
+  .hengshidoc-footer {
     p {
       .response-mobile;
     }
