--- a/src/less/website/header.less
+++ b/src/less/website/header.less
@@ -1,4 +1,4 @@
-.book-header {
+.hengshidoc-header {
     font-family: @font-family-sans;
 
     height: @header-height;
@@ -21,7 +21,7 @@
 }
 
 @media (max-width: @mobileMaxWidth) {
-    .book-header-inner {
+    .hengshidoc-header-inner {
         .response-mobile;
     }
 }
