--- a/src/less/website/summary.less
+++ b/src/less/website/summary.less
@@ -1,4 +1,4 @@
-.book-summary {
+.hengshidoc-summary {
     font-family: @font-family-sans;
 
     position: absolute;
@@ -98,15 +98,15 @@
     }
 }
 
-.book {
+.hengshidoc {
     &.with-summary {
-        .book-summary {
+        .hengshidoc-summary {
             left: 0px;
         }
     }
 
     &.without-animation {
-        .book-summary {
+        .hengshidoc-summary {
             .transition(none) !important;
         }
     }
