--- a/_layouts/website/languages.html
+++ b/_layouts/website/languages.html
@@ -3,7 +3,7 @@
 {% block title %}{{ "LANGS_CHOOSE"|t }} · {{ super() }}{% endblock %}
 
 {% block body %}
-<div class="book-langs-index" role="navigation">
+<div class="hengshidoc-langs-index" role="navigation">
     <div class="inner">
         <h3>{{ "LANGS_CHOOSE"|t }}</h3>
 
