--- a/src/less/website/languages.less
+++ b/src/less/website/languages.less
@@ -1,4 +1,4 @@
-.book-langs-index {
+.hengshidoc-langs-index {
     width: 100%;
     height: 100%;
     padding: 40px 0px;
@@ -7,7 +7,7 @@
 
     @media (max-width: 600px) {
         padding: 0px;
-    } 
+    }
 
     .inner {
         max-width: 600px;
@@ -44,7 +44,7 @@
                 @media (max-width: 600px) {
                     width: 100%;
                     max-width: 100%;
-                } 
+                }
             }
         }
     }
