--- a/src/less/website/variables.less
+++ b/src/less/website/variables.less
@@ -35,6 +35,8 @@
 // Sidebar
 @sidebar-transition-duration:         250ms;
 @sidebar-width:                       300px;
+@sidebar-height:                      700px;
+@sidebar-top:                         100px;
 @sidebar-breakpoint:                  600px;
 @sidebar-color:                       hsl(207, 15%, 25%);
 @sidebar-background:                  #fafafa;
