--- a/src/less/website/body.less
+++ b/src/less/website/body.less
@@ -11,7 +11,7 @@
     padding-left: @sidebar-width;
 
     &-inner {
-        min-height: calc(~"100% - 50px")
+        min-height: ~'calc(100vh - 250px - 50px)';
     }
 }
 
