--- a/src/less/website.less
+++ b/src/less/website.less
@@ -26,10 +26,11 @@
 
 a {
     text-decoration: none;
+    transition: all .2s ease;
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 100%;
 }
 
 body {
