--- a/_layouts/website/summary.html
+++ b/_layouts/website/summary.html
@@ -8,54 +8,30 @@
             {% else %}
                 <span>
             {% endif %}
-                    {% if article.level != "0" and config.pluginsConfig['theme-docs-hengshi'].showLevel %}
-                        <b>{{ article.level }}.</b>
-                    {% endif %}
-                    {{ article.title }}
+
+            {{ article.title }}
+
             {% if article.path  or article.url %}
                 </a>
             {% else %}
                 </span>
             {% endif %}
-
-            {% if article.articles.length > 0 %}
-            <ul class="articles">
-                {{ articles(article.articles, file, config) }}
-            </ul>
-            {% endif %}
         </li>
     {% endfor %}
 {% endmacro %}
 
-<ul class="summary">
-    {% set _divider = false %}
-    {% if config.links.sidebar  %}
-    {% for linkTitle, link in config.links.sidebar  %}
-        {% set _divider = true %}
-        <li>
-            <a href="{{ link }}" target="_blank" class="custom-link">{{ linkTitle }}</a>
-        </li>
-    {% endfor %}
-    {% endif %}
-
-    {% if _divider %}
-    <li class="divider"></li>
-    {% endif %}
-
-    {% for part in summary.parts %}
-        {% if part.title %}
-        <li class="header">{{ part.title }}</li>
-        {% elif not loop.first %}
-        <li class="divider"></li>
-        {% endif %}
-        {{ articles(part.articles, file, config) }}
-    {% endfor %}
-
-    <li class="divider"></li>
-
-    <li>
-        <a href="https://www.gitbook.com" target="blank" class="gitbook-link">
-            {{ "GITBOOK_LINK"|t }}
-        </a>
-    </li>
-</ul>
+<div class="hengshidoc-summary">
+    <div class="hengshidoc-summary-links">
+        <h2>帮助文档目录</h2>
+        <ul>
+        {% for part in summary.parts %}
+            {{ articles(part.articles, file, config) }}
+        {% endfor %}
+        </ul>
+    </div>
+    <div class="hengshidoc-summary-more">
+        <h2>更多相关信息</h2>
+        <p>访问我们的官方网站并申请使用</p>
+        <a class="button" href="https://hengshi.com">前往</a>
+    </div>
+</div>
