--- a/src/less/website/buttons.less
+++ b/src/less/website/buttons.less
@@ -3,13 +3,13 @@
 }
 
 .button {
+    display: block;
     border: 0;
     background-color: transparent;
     background: @button-background;
     color: @button-color;
     width: 100%;
     text-align: center;
-    float: left;
     line-height: @line-height-base;
     padding: 8px 4px;
 
