--- a/src/less/website/page.less
+++ b/src/less/website/page.less
@@ -4,16 +4,7 @@
 }
 
 .page-inner {
-    position: relative;
-    max-width: 800px;
     margin: 0px auto;
-    padding: 20px 15px 40px 15px;
-
-    .btn-group {
-        .btn {
-            border-radius: 0px;
-            background: #eee;
-            border: 0px;
-        }
-    }
+    position: relative;
+    padding: @sidebar-top 30px 40px;
 }
