--- a/src/less/website/summary.less
+++ b/src/less/website/summary.less
@@ -7,89 +7,89 @@
     z-index: 1;
 
     width: @sidebar-width;
-    color: @sidebar-color;
-    background: @sidebar-background;
+    color: @body-color;
 
-    ul.summary {
-        list-style: none;
-        margin: 0px;
-        padding: 0px;
+    &-links,
+    &-more {
+        border-radius: @border-radius-large;
+        background: @sidebar-background;
 
-        .transition(top 0.5s ease);
+        h2 {
+            color: @sidebar-color;
+            margin: 0 0 20px 0;
+        }
+    }
 
-        li {
-            list-style: none;
+    &-links {
+        padding: @sidebar-padding-top 20px 10px;
+        margin-bottom: 22px;
+        h2 {
+            padding-left: 30px;
+        }
+        ul {
+            margin: 0;
+            padding: 0;
+            li {
+                padding: 0;
+                list-style: none;
+                border-top: 1px solid @divider-color;
 
-            &.header {
-                padding: @sidebar-link-padding-v @sidebar-link-padding-h;
-                padding-top: 20px;
-                text-transform: uppercase;
-                color: @sidebar-header-color;
-            }
+                &:first-child {
+                    border-top: none;
+                }
 
-            &.divider {
-                height: 1px;
-                margin: 7px 0;
-                overflow: hidden;
-                background: @sidebar-divider-color;
-            }
+                a, span {
+                    display: block;
+                    color: @sidebar-link-color;
+                    background: @sidebar-link-background;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    position: relative;
+                    text-decoration: none;
+                    outline: none;
+                    padding: 0 30px;
+                    line-height: 45px;
 
-            i.fa-check {
-                display: none;
-                position: absolute;
-                right: 9px;
-                top: 16px;
-                font-size: 9px;
-                color: @sidebar-icon-color;
-            }
-
-            &.done {
-                > a {
-                    color: @sidebar-link-completed;
-                    font-weight: @sidebar-link-completed-weight;
-
-                    i {
-                        display: inline;
+                    &:hover,
+                    &:focus {
+                        color: @sidebar-link-hover-color;
+                        background: @sidebar-link-hover-background;
+                        text-decoration: none;
                     }
                 }
-            }
-
-            a, span {
-                display: block;
-                padding: @sidebar-link-padding-v @sidebar-link-padding-h;
-                border-bottom: none;
-                color: @sidebar-link-color;
-                background: @sidebar-link-background;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                white-space: nowrap;
-                position: relative;
-            }
-
-            a:hover {
-                text-decoration: underline;
-            }
-
-            a:focus {
-                outline: none;
-            }
-
-            &.active > a {
-                color: @sidebar-link-hover-color;
-                background: @sidebar-link-hover-background;
-                text-decoration: none;
-            }
-
-            ul {
-                padding-left: @sidebar-nested-padding;
             }
         }
     }
 
+    &-more {
+        padding: @sidebar-padding-top 0 @sidebar-padding-top @sidebar-padding-left;
+
+        p {
+            margin-bottom: 10px;
+        }
+
+        .button {
+            width: 90px;
+            border-radius: @border-radius-large;
+        }
+    }
 }
 
 @media (max-width: @mobileMaxWidth) {
     .hengshidoc-summary {
         position: static;
+
+        &-links {
+            padding: 20px;
+
+            ul li a,
+            ul li span {
+                line-height: 25px;
+            }
+        }
+        &-more {
+            display: none;
+        }
     }
 }
