--- a/src/less/website/page.less
+++ b/src/less/website/page.less
@@ -8,3 +8,9 @@
     position: relative;
     padding: @sidebar-top 30px 40px;
 }
+
+@media (max-width: @mobileMaxWidth) {
+  .page-inner {
+    padding: 20px;
+  }
+}
