--- a/src/less/website/variables.less
+++ b/src/less/website/variables.less
@@ -25,7 +25,7 @@
 @header-background:                   @primary-color;
 
 // Logo
-@logo-width:                          160px;
+@logo-height:                         23px;
 
 // Footer
 @footer-height:                       50px;
@@ -40,7 +40,7 @@
 @sidebar-top:                         35px;
 @sidebar-padding-top:                 30px;
 @sidebar-padding-left:                50px;
-@sidebar-width:                       340px;
+@sidebar-width:                       26%;
 @sidebar-color:                       #74777a;
 @sidebar-background:                  @primary-background;
 
