--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -29,7 +29,8 @@
 {% block body %}
 <div class="hengshidoc">
     <div class="hengshidoc-header">
-        <div class="hengshidoc-header-inner">
+        <div class="hengshidoc-header-inner"
+            style="background-image: url({{ "images/header-background.png"|resolveAsset }})">
             <img src="{{ "images/logo.svg"|resolveAsset }}" class="logo">
             <h1>{{ config.title }}</h1>
             {% block search_input %}{% endblock %}
@@ -40,34 +41,38 @@
     </div>
 
     <div class="hengshidoc-body">
-        {% block book_sidebar %}
-            {% block book_summary %}
-                {% include "website/summary.html" %}
-            {% endblock %}
-        {% endblock %}
-
         {% block book_body %}
             <div class="hengshidoc-body-inner">
                 {% block book_inner %}
                     <div class="page-wrapper" tabindex="-1" role="main">
                         <div class="page-inner">
                             {% block search_results %}
-                                <section class="normal markdown-section">
                                 {% block page %}
                                     {% if file.path === "README.md" %}
                                         <div class="hengshidoc-indexpage">
-                                    {% endif %}
-                                    {{ page.content|safe }}
-                                    {% if file.path === "README.md" %}
+                                            <section class="normal markdown-section">
+                                                {{ page.content|safe }}
+                                            </section>
+                                        </div>
+                                    {% else %}
+                                        <div class="hengshidoc-page">
+                                            <section class="normal markdown-section">
+                                                {{ page.content|safe }}
+                                            </section>
                                         </div>
                                     {% endif %}
                                 {% endblock %}
-                                </section>
                             {% endblock %}
                         </div>
                     </div>
                 {% endblock %}
             </div>
+        {% endblock %}
+
+        {% block book_sidebar %}
+            {% block book_summary %}
+                {% include "website/summary.html" %}
+            {% endblock %}
         {% endblock %}
     </div>
 <!--
