--- a/src/less/website/body.less
+++ b/src/less/website/body.less
@@ -3,7 +3,8 @@
     color: @body-color;
     background: @body-background;
 
-    &-indexpage {
+    &-indexpage .normal,
+    &-page .normal {
         ul,li {
             padding: 0;
             list-style: none;
@@ -17,39 +18,69 @@
                 }
             }
         }
-        & > ul > li {
-            display: inline-block;
-            width: 40%;
-            margin: 0 4.5% 1%;
-            vertical-align: top;
-            & > a {
-                display: block;
-                padding: 0 10px;
-                font-size: 1.3rem;
-                font-weight: bold;
-                line-height: 1.86;
-                border-bottom: 1px solid @divider-color;
-            }
-            & > ul {
-                padding-left: 0;
-                height: 200px;
-                & > li {
-                    a {
-                        display: block;
-                        position: relative;
-                        line-height: 40px;
-                        padding-left: 25px;
-
-                        &:before {
-                            content: '•';
-                            font-size: 6px;
+        & > ul {
+            padding-left: 0!important;
+        }
+    }
+    &-indexpage .normal {
+        & > ul {
+            & > li {
+                display: inline-block;
+                width: 45%;
+                margin-bottom: 2%;
+                vertical-align: top;
+                &:nth-child(odd) {
+                    margin-right: 4.5%;
+                }
+                & > a {
+                    display: block;
+                    padding: 0 10px;
+                    font-size: 24px;
+                    font-weight: bold;
+                    line-height: 1.86;
+                    border-bottom: 1px solid @divider-color;
+                }
+                & > ul {
+                    padding-left: 0;
+                    margin-top: 10px;
+                    & > li {
+                        a {
+                            display: block;
+                            position: relative;
                             line-height: 40px;
-                            position: absolute;
-                            left: 12px;
-                            top: 0;
+                            padding-left: 25px;
+
+                            &:before {
+                                content: '•';
+                                font-size: 6px;
+                                line-height: 40px;
+                                position: absolute;
+                                left: 12px;
+                                top: 0;
+                            }
                         }
                     }
                 }
+            }
+        }
+    }
+    &-page .normal {
+        li {
+            position: relative;
+            padding-left: 25px;
+            line-height: 40px;
+        }
+        & > ul > li {
+            a {
+                display: block;
+            }
+            &:before {
+                content: '•';
+                font-size: 6px;
+                line-height: 40px;
+                position: absolute;
+                left: 12px;
+                top: 0;
             }
         }
     }
@@ -62,7 +93,7 @@
     padding-left: @sidebar-width;
 
     &-inner {
-        min-height: ~'calc(100vh - 250px)';
+        min-height: ~'calc(100vh - 300px)';
     }
 }
 
@@ -72,11 +103,11 @@
 
         padding-left: 0;
     }
-    .hengshidoc-indexpage {
+    .hengshidoc-indexpage .normal {
         & > ul > li {
             display: block;
             width: 100%;
-            margin: 0 0 1%;
+            margin: 0 0 20px 0;
         }
     }
 }
