Optimize hengshi doc theme

--- a/_layouts/website/summary.html
+++ b/_layouts/website/summary.html
@@ -32,6 +32,8 @@
     <div class="hengshidoc-summary-more">
         <h2>更多相关信息</h2>
         <p>访问我们的官方网站并申请使用</p>
-        <a class="button" href="https://hengshi.com">前往</a>
+        <a class="button"
+            target="_blank"
+            href="https://hengshi.com">前往</a>
     </div>
 </div>
