--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -66,13 +66,34 @@
                         </div>
                     </div>
                 {% endblock %}
-            </div>
-        {% endblock %}
 
-        {% block book_sidebar %}
-            {% block book_summary %}
-                {% include "website/summary.html" %}
-            {% endblock %}
+                {% block book_navigation %}
+                    {% if page.previous and page.previous.path %}
+                    <a href="{{ page.previous.path|resolveFile }}{{ page.previous.anchor }}"
+                        class="navigation navigation-prev {% if not (page.next and page.next.path) %}navigation-unique{% endif %}"
+                        aria-label="Previous page: {{ page.previous.title }}">
+                        <i class="fa fa-angle-left"></i><span>{{ page.previous.title }}</span>
+                    </a>
+                    {% else %}
+                        <a class="navigation navigation-prev"></a>
+                    {% endif %}
+                    {% if page.next and page.next.path %}
+                    <a href="{{ page.next.path|resolveFile }}{{ page.next.anchor }}"
+                        class="navigation navigation-next {% if not (page.previous and page.previous.path) %}navigation-unique{% endif %}"
+                        aria-label="Next page: {{ page.next.title }}">
+                        <span>{{ page.next.title }}</span><i class="fa fa-angle-right"></i>
+                    </a>
+                    {% else %}
+                        <a class="navigation navigation-next"></a>
+                    {% endif %}
+                {% endblock %}
+
+                {% block book_sidebar %}
+                    {% block book_summary %}
+                        {% include "website/summary.html" %}
+                    {% endblock %}
+                {% endblock %}
+            </div>
         {% endblock %}
     </div>
 <!--
