--- a/src/less/website/page.less
+++ b/src/less/website/page.less
@@ -25,7 +25,10 @@
     border-left-style: solid;
     position: relative;
 
-    p:last-child {
+    p:last-child,
+    ul:last-child,
+    ol:last-child,
+    code:last-child {
       margin-bottom: 0;
     }
 
