--- a/src/less/website/body.less
+++ b/src/less/website/body.less
@@ -69,6 +69,8 @@
     }
     &-page .normal {
         .hengshidoc-custom-ul + p + ul {
+            padding-left: 0;
+
             li {
                 padding: 0;
                 list-style: none;
@@ -76,7 +78,7 @@
             }
             & > li {
                 position: relative;
-                padding-left: 25px;
+                padding-left: 15px;
 
                 a {
                     display: block;
@@ -92,7 +94,7 @@
                     font-size: 6px;
                     line-height: 40px;
                     position: absolute;
-                    left: 12px;
+                    left: 2px;
                     top: 0;
                 }
             }
