--- a/src/less/website/header.less
+++ b/src/less/website/header.less
@@ -71,6 +71,8 @@
         width: 100%;
         height: @breadcrumb-height;
         line-height: @breadcrumb-height;
+        overflow-x: auto;
+        overflow-y: visible;
 
         color: @breadcrumb-color;
         background: @primary-background;
@@ -156,6 +158,7 @@
         }
     }
     .hengshidoc-breadcrumb-inner {
-        width: 90%;
+        width: 100%;
+        padding: 0 10px;
     }
 }
