--- a/src/less/website.less
+++ b/src/less/website.less
@@ -22,6 +22,7 @@
     -webkit-text-size-adjust: none;
     -webkit-touch-callout: none;
     -webkit-font-smoothing: antialiased;
+    -webkit-appearance: none;
 }
 
 a {
