--- a/src/less/website/header.less
+++ b/src/less/website/header.less
@@ -18,7 +18,7 @@
             position: relative;
             text-align: center;
             overflow: hidden;
-            background-position: right bottom;
+            background-position: 80% bottom;
             background-size: contain;
             background-repeat: no-repeat;
 
@@ -39,14 +39,11 @@
         }
         &-fixed {
             position: fixed;
-            height: 50px;
+            height: 62px;
             left: 0;
             top: 0;
 
             .hengshidoc-header-inner {
-                .logo {
-                    top: 13px;
-                }
                 h1 {
                     display: none;
                 }
@@ -54,7 +51,7 @@
                 #book-search-input {
                     position: absolute;
                     right: 0;
-                    top: 9px;
+                    top: 15px;
 
                     &:after,
                     input {
