--- a/src/less/website/page.less
+++ b/src/less/website/page.less
@@ -6,7 +6,7 @@
 .page-inner {
     margin: 0px auto;
     position: relative;
-    padding: @sidebar-top 30px 40px;
+    padding: @sidebar-top 0 40px 58px;
 }
 
 @media (max-width: @mobileMaxWidth) {
