--- a/src/less/website/body.less
+++ b/src/less/website/body.less
@@ -26,7 +26,7 @@
                 margin-bottom: 2%;
                 vertical-align: top;
                 &:nth-child(odd) {
-                    margin-right: 4.5%;
+                    margin-right: 9%;
                 }
                 & > a {
                     display: block;
@@ -121,7 +121,7 @@
 
             &-prev {
                 text-align: left;
-                padding-left: 30px;
+                padding-left: 58px;
 
                 .fa {
                     margin-right: 5px;
@@ -129,7 +129,7 @@
             }
             &-next {
                 text-align: right;
-                padding-right: 30px;
+                padding-right: 0;
 
                 .fa {
                     margin-left: 5px;
