--- a/src/less/website/summary.less
+++ b/src/less/website/summary.less
@@ -23,14 +23,15 @@
     }
 
     &-links {
-        padding: @sidebar-padding-top 30px 10px;
+        padding-top: @sidebar-padding-top;
+        padding-bottom: 10px;
         margin-bottom: 22px;
         h2 {
-            padding-left: 20px;
+            padding-left: @sidebar-padding-left;
         }
         ul {
             margin: 0;
-            padding: 0;
+            padding: 0 40px;
             li {
                 padding: 0;
                 list-style: none;
@@ -50,7 +51,7 @@
                     position: relative;
                     text-decoration: none;
                     outline: none;
-                    padding: 0 20px;
+                    padding: 0 10px;
                     line-height: 45px;
 
                     &:hover,
