Add ga to docs.hengshi

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -24,4 +24,13 @@
         {% block body %}{% endblock %}
         {% block javascript %}{% endblock %}
     </body>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102583406-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){window.dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-102583406-4');
+    </script>
 </html>
